Fixed Israel logo size on mobile

--- a/src/app/assets/styles/components/_liveSearch.scss
+++ b/src/app/assets/styles/components/_liveSearch.scss
@@ -28,6 +28,13 @@
       padding: 10px;
       color: #1f3998;
       font-weight: bold;
+      @include for-tablet-layout {
+        font-size: 14px;
+      }
+      @include for-mobile-layout {
+        font-size: 10px;
+        padding: 5px;
+      }
     }
   }
 }
