--- a/src/app/assets/styles/components/_regionSort.scss
+++ b/src/app/assets/styles/components/_regionSort.scss
@@ -13,6 +13,7 @@
     }
     @include for-mobile-layout {
       height: 30px;
+      width: 20px;
       padding: 0;
     }
     &:focus {
